Fixes #2 vertical overflow now scrolls.

--- a/src/styles.css
+++ b/src/styles.css
@@ -16,5 +16,5 @@ h1, h2, h3, h4 {
 }
 
 body {
-    overflow: hidden;
+    overflow-x: hidden;
 }
